<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/ic_back" />


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtOriginalImage"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/editor_button_original"
            android:textColor="#000"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/txtPhotoSave"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/dw_button_green"
            android:gravity="center"
            android:text="@string/editor_button_save"
            android:textColor="#fff"
            android:textSize="12dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/Before"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/textwhite"
        android:gravity="center"
        android:text="Before"
        android:textColor="@color/black" />

    <com.jsibbold.zoomage.ZoomageView
        android:id="@+id/imgPickedOrgImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="20dp"
        app:zoomage_animateOnReset="true"
        app:zoomage_autoCenter="true"
        app:zoomage_autoResetMode="UNDER"
        app:zoomage_maxScale="8"
        app:zoomage_minScale="0.6"
        app:zoomage_restrictBounds="false"
        app:zoomage_translatable="true"
        app:zoomage_zoomable="true" />

    <TextView
        android:id="@+id/txtTitleafter"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/textgreen"
        android:gravity="center"
        android:text="After"
        android:textColor="@color/white" />

    <com.jsibbold.zoomage.ZoomageView
        android:id="@+id/imgPickedImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="20dp"
        app:zoomage_animateOnReset="true"
        app:zoomage_autoCenter="true"
        app:zoomage_autoResetMode="UNDER"
        app:zoomage_maxScale="8"
        app:zoomage_minScale="0.6"
        app:zoomage_restrictBounds="false"
        app:zoomage_translatable="true"
        app:zoomage_zoomable="true" />


    <!--        <ImageView-->
    <!--            android:layout_marginTop="10dp"-->
    <!--            android:paddingHorizontal="20dp"-->
    <!--            android:id="@+id/imgPickedOrgImage"-->
    <!--            android:layout_weight="1"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:scaleType="fitCenter"-->
    <!--            android:layout_height="0dp"/>-->

    <!--        <ImageView-->
    <!--            android:layout_marginTop="10dp"-->
    <!--            android:paddingHorizontal="20dp"-->
    <!--            android:id="@+id/imgPickedImage"-->
    <!--            android:layout_weight="1"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:scaleType="fitCenter"-->
    <!--            android:layout_height="0dp"/>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <SeekBar
                android:id="@+id/seekValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:progressDrawable="@drawable/custom_seekbar"
                android:thumb="@drawable/thumb" />

            <LinearLayout
                android:id="@+id/llPickColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgPickColor1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/dw_color_2" />

                <ImageView
                    android:id="@+id/imgPickColor2"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/dw_color_3" />

                <ImageView
                    android:id="@+id/imgPickColor3"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/dw_color_1" />


            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llGap"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:background="@drawable/dw_stroke_white"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:id="@+id/imgSpace"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_space" />

                    <TextView
                        android:id="@+id/txtGapValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="2"
                        android:textColor="#00C3AD"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtGap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/editor_button_gap"
                    android:textColor="#000"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llThickness"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/dw_stroke_white"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:id="@+id/imgThickness"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_size" />

                    <TextView
                        android:id="@+id/txtThicknessValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="2"
                        android:textColor="#00C3AD"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtThickness"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/editor_button_thickness"
                    android:textColor="#000"
                    android:textSize="12dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/llColor"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/dw_stroke_white"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:id="@+id/imgColor"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_color" />

                    <TextView
                        android:id="@+id/txtColorValue"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/dw_color_1"
                        android:visibility="gone" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtColor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/editor_button_color"
                    android:textColor="#000"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>